<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/codeText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>

    <EditText
        android:id="@+id/codeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/code"
        android:textSize="12sp"
        tools:ignore="LabelFor,MissingConstraints"
        android:inputType="text">
        <!-- android:hint="请输入条码"-->
    </EditText>

    <TextView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/code"
        app:layout_constraintRight_toLeftOf="@id/codeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        tools:ignore="MissingConstraints">

    </TextView>


    <EditText
        android:id="@+id/numberText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/codeText"
        app:layout_constraintStart_toEndOf="@id/number"
        app:layout_constraintLeft_toRightOf="@id/number"
        tools:ignore="LabelFor,MissingConstraints"
        android:layout_marginTop="10dp"

        android:inputType="number">

    </EditText>

    <Button
        android:id="@+id/export"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/export"
        app:layout_constraintLeft_toRightOf="@id/numberText"
        app:layout_constraintTop_toBottomOf="@id/codeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/insert"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/insert"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/insert"
        app:layout_constraintLeft_toRightOf="@id/numberText"
        app:layout_constraintTop_toBottomOf="@id/codeText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

    </Button>

    <TextView
        android:id="@+id/codeShow"

        android:layout_width="260dp"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:text="@string/code"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf='parent'
        app:layout_constraintEnd_toStartOf="@id/numberShow"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp"


        app:layout_constraintTop_toTopOf='parent'
        tools:ignore="MissingConstraints">

    </TextView>



    <TextView
        android:id="@+id/numberShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/number"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf='parent'
        app:layout_constraintBottom_toBottomOf='parent'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/codeShow"
        android:layout_marginBottom="80dp"



        tools:ignore="MissingConstraints">


    </TextView>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/insert"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints">


    </TextView>

    <EditText
        android:id="@+id/userText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/user"
        app:layout_constraintTop_toBottomOf="@id/insert"
        android:layout_marginTop="10dp"
        android:text="1"

        android:inputType="number">

    </EditText>

    <TextView
        android:id="@+id/codeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codeNum"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/insert"
        app:layout_constraintLeft_toRightOf="@id/userText"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>