<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/modifyTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/codeM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@id/codeTextM"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/Title"
        >

    </TextView>

    <EditText
        android:id="@+id/codeTextM"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/codeM"
        app:layout_constraintLeft_toRightOf="@id/codeM"
        tools:ignore="LabelFor,MissingConstraints"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:autofillHints="">
        <!-- android:hint="请输入条码"-->
    </EditText>

    <TextView
        android:id="@+id/numberM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/codeM"
        app:layout_constraintRight_toLeftOf="@id/codeTextM"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>



    <EditText
        android:id="@+id/numberTextM"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/codeTextM"
        app:layout_constraintStart_toEndOf="@id/numberM"
        app:layout_constraintLeft_toRightOf="@id/numberM"
        tools:ignore="LabelFor,MissingConstraints"

        android:inputType="number"
        android:autofillHints="">

    </EditText>

    <TextView
        android:id="@+id/userM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/numberM"
        app:layout_constraintRight_toLeftOf="@id/userTextM"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>

    <EditText
        android:id="@+id/userTextM"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/numberTextM"
        app:layout_constraintStart_toEndOf="@id/userM"
        tools:ignore="LabelFor,MissingConstraints"
        android:inputType="number"
        android:autofillHints="">

    </EditText>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/numberTextM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        >
<!--        app:layout_constraintEnd_toStartOf="@id/buttonD"-->
    </Button>
<!--    <Button-->
<!--        android:id="@+id/buttonD"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/delete"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        app:layout_constraintTop_toBottomOf="@id/numberTextM"-->
<!--        app:layout_constraintStart_toEndOf="@id/buttonM"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="30dp"-->
<!--        >-->

<!--    </Button>-->
</androidx.constraintlayout.widget.ConstraintLayout>